--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="#About" class="btn">About Me</a>
       </div>
       <div class="user_img">
-        <img src="C:\Users\Prakriti\Desktop\images\1618377247156.jpg"alt="" />
+        <img src="https://lh5.googleusercontent.com/PLRDjly4JBroPXWA-O3ee6MgvD3PkQTlF67kycYVvRawJkgD35EI41Zwz-khrALxxHEu_u1QStqR2w=w1366-h625-rw"alt="" />
       </div>
     </section>
 
