--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="#About" class="btn">About Me</a>
       </div>
       <div class="user_img">
-        <img src="https://lh5.googleusercontent.com/PLRDjly4JBroPXWA-O3ee6MgvD3PkQTlF67kycYVvRawJkgD35EI41Zwz-khrALxxHEu_u1QStqR2w=w1366-h625-rw"alt="" />
+        <img src=".\img\1618377247156.jpg"alt="" />
       </div>
     </section>
 
@@ -35,7 +35,7 @@
       
       </p>
     </div>
-        <img src="C:\Users\Prakriti\Desktop\images\photo-1555066931-4365d14bab8c.jpg" alt="">
+        <img src=".\img\\photo-1555066931-4365d14bab8c.jpg" alt="">
     </section>
     <section class="skills center" id="Skills">
       <p class="skill_head">Skills</p>
@@ -260,3 +260,4 @@
     </script>
   </body>
 </html>
+
