--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="#About" class="btn">About Me</a>
       </div>
       <div class="user_img">
-        <img src=".\img\1618377247156.jpg"alt="" />
+        <img src="1618377247156.jpg"alt="" />
       </div>
     </section>
 
@@ -35,7 +35,7 @@
       
       </p>
     </div>
-        <img src=".\img\\photo-1555066931-4365d14bab8c.jpg" alt="">
+        <img src="photo-1555066931-4365d14bab8c.jpg" alt="">
     </section>
     <section class="skills center" id="Skills">
       <p class="skill_head">Skills</p>
