--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="#About" class="btn">About Me</a>
       </div>
       <div class="user_img">
-        <img src="1618377247156.jpg"alt="" />
+        <img src=".\img\1618377247156.jpg"alt="" />
       </div>
     </section>
 
@@ -35,7 +35,7 @@
       
       </p>
     </div>
-        <img src="photo-1555066931-4365d14bab8c.jpg" alt="">
+        <img src=".\img\\photo-1555066931-4365d14bab8c.jpg" alt="">
     </section>
     <section class="skills center" id="Skills">
       <p class="skill_head">Skills</p>
@@ -51,7 +51,8 @@
         </div>
         <div class="box">
           <!-- <i class="fab fa-js-square fa-4x"></i> -->
-          <p><h2>Operating Systems</h2></p>
+          <p>
+          <h2 style="padding-left: 30px;">Operating Systems</h2></p>
         </div>
         <div class="box">
           <!-- <i class="fab fa-react fa-4x"></i> -->
@@ -63,7 +64,7 @@
         </div>
         <div class="box">
           <!-- <i class="fas fa-desktop fa-4x"></i> -->
-          <p><h2> Web Development</h2></p>
+          <p><h2 style="padding-left:10px;"> Web Development</h2></p>
         </div>
       </div>
     </section>
@@ -152,7 +153,7 @@
       </div>
     </section>
     <section class="skills center" id="Skills">
-      <p class="skill_head">Coding Profiles</p>
+      <p class="skill_head" style="padding-left: 82px;">Coding Profiles</p>
       <div class="skill_box center">
         <div class="box">
           <!-- <i class="fab fa-html5 fa-4x"></i> -->
@@ -199,7 +200,7 @@
         <a href="https://github.com/prakriti28" target="_blank_"
           ><i class="fab fa-github"></i
         ></a>
-        <a href="prakriti.kshyp@gmail.com" target="_blank_"
+        <a href="mailto:prakriti.kshyp@gmail.com" target="_blank_"
         ><i class="fas fa-envelope"></i
       ></a>
         <!-- <a
@@ -260,4 +261,3 @@
     </script>
   </body>
 </html>
-
