--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       
       </p>
     </div>
-        <img src=".\img\\photo-1555066931-4365d14bab8c.jpg" alt="">
+        <img src=".\img\photo-1555066931-4365d14bab8c.jpg" alt="">
     </section>
     <section class="skills center" id="Skills">
       <p class="skill_head">Skills</p>
