--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
-    <script src="particles.js"></script>
+    <script src="app.js"></script>
     <script>
       const toggle = document.getElementById("toggle");
       const btn = document.getElementById("btn");
